--- a/HTML-assignement/portfolio/index.html
+++ b/HTML-assignement/portfolio/index.html
@@ -10,7 +10,7 @@
         <h1>Nader Ben Mahmoud</h1>
         <img src="programmer_photo.jpg" alt="Nader Photo" width="120" height="120">
     </div>
-    <div>
+    <div>          
         <img src="github.png" alt="github logo" width="30" height="30">
         <a href="https://github.com/NaderCP">My github</a>
         <img src="linkedin.png" alt="linkedin logo" width="30" height="30">
@@ -18,37 +18,39 @@
         <img src="email.png" alt="email logo"  width="30" height="30">
         <a href="naderbm@outlook.com">My email</a>
     </div>
-    <h2>Technologies :</h2>
-   <table border="1">
-        <tr>
-            <th> Front-End</th>
-            <th> Python</th>
-            <th>Javascript</th>
-            <th>Database</th>
-            <th>Concepts</th>
-        </tr>
-        <tr>
-            <td>HTML5</td>
-            <td>Django</td>
-            <td>Express</td>
-            <td>MSQL</td>
-            <td>AJAX</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
-            <td>Flask</td>
-            <td>Mongoose</td>
-            <td>MongoDB</td>
-            <td>OOP</td>
-        </tr>
-        <tr>
-            <td>Bootstrap</td>
-            <td>Unit Test</td>
-            <td>React</td>
-            <td></td>
-            <td>REST</td>
-        </tr>
-    </table>
+    <div>
+        <h2>Technologies :</h2>
+        <table border="1">
+            <tr>
+                <th> Front-End</th>
+                <th> Python</th>
+                <th>Javascript</th>
+                <th>Database</th>
+                <th>Concepts</th>
+            </tr>
+            <tr>
+                <td>HTML5</td>
+                <td>Django</td>
+                <td>Express</td>
+                <td>MSQL</td>
+                <td>AJAX</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Flask</td>
+                <td>Mongoose</td>
+                <td>MongoDB</td>
+                <td>OOP</td>
+            </tr>
+            <tr>
+                <td>Bootstrap</td>
+                <td>Unit Test</td>
+                <td>React</td>
+                <td></td>
+                <td>REST</td>
+            </tr>
+        </table>
+    </div>
     <div>
         <h2>Social Snakes :</h2>
         <img src="html.png" alt="html logo" width="30" height="30">
@@ -59,7 +61,7 @@
                 <a href="#">Deployed</a>
             </div>
     </div>
-
+<div>
     <h2>Contact Me</h2>
 
     <form >
@@ -77,5 +79,6 @@
         </div>
         <button type="submit">Send a Message</button>
     </form>
+</div>
 </body>
 </html>
