review using display:inline-block;

--- a/styling/Plotting-Our-Blocks/index.html
+++ b/styling/Plotting-Our-Blocks/index.html
@@ -8,13 +8,14 @@
     <div class="container">
         <div class="top-nav"></div>
         
-        <div class="side-nav"></div>
-        <div class="main">
-            <div class="sub-content"></div>
-            <div class="sub-content"></div>
-            <div class="sub-content"></div>
-            <div id="advertisement"></div>
-        </div>
+            <div class="contain">
+                <div class="side-nav"></div><div class="main">
+                     <div class="sub-content"></div>
+                    <div class="sub-content"></div>
+                    <div class="sub-content"></div>
+                    <div id="advertisement"></div>
+                 </div>
+            </div>
     </div>
 </body>
 </html>
